<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_splash_scene"
    tools:context=".ui.view.SplashActivity">

    <TextView
        android:id="@+id/PrimeiroI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/I"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="268dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/primeiroG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="G"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/primeiroO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/O"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/primeiroR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/R"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/PrimeiroN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/N"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/primeiroA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/A"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/PrimeiroE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/E"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="320dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/PrimeiroZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Z"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="130dp" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/black"
        tools:layout_editor_absoluteY="234dp" />

    <TextView
        android:id="@+id/SegundoS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/S"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:id="@+id/SegundoC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/C"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:id="@+id/SegundoA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/A"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="269dp"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:id="@+id/SegundoO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/O"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:id="@+id/SegundoT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/T"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:id="@+id/SegundoN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/N"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="261dp" />


</androidx.constraintlayout.motion.widget.MotionLayout>